fix: :bug: changed z-index, added test files and handling undefined values

--- a/chrome/src/pages/content/style.module.css
+++ b/chrome/src/pages/content/style.module.css
@@ -8,7 +8,7 @@
 
 .logger_container {
     position: fixed;
-    z-index: 10000000;
+    z-index: 999999999;
     right: 0.5rem;
     bottom: 0.5rem;
     font-family: 'Inter', sans-serif;
